Modify using @inotom/smoothscroll package

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,8 +1,18 @@
 {
-  "extends": "eslint:recommended",
+  "root": true,
+  "extends": [
+    "eslint:recommended",
+    "plugin:@typescript-eslint/eslint-recommended",
+    "plugin:@typescript-eslint/recommended",
+    "prettier"
+  ],
+  "plugins": [
+    "@typescript-eslint"
+  ],
+  "parser": "@typescript-eslint/parser",
   "parserOptions": {
     "sourceType": "module",
-    "ecmaVersion": 6,
+    "ecmaVersion": 2020,
     "ecmaFeatures": {
       "impliedStrict": true,
       "jsx": false
@@ -13,13 +23,23 @@
     "semi": 2,
     "eqeqeq": 2,
     "space-before-blocks": [2, "always"],
-    "space-before-function-paren": [2, "never"],
+    "space-before-function-paren": [2, {
+      "anonymous": "never",
+      "named": "never",
+      "asyncArrow": "always"
+    }],
     "space-infix-ops": 2,
     "keyword-spacing": 2,
     "indent": ["error", 2, { "SwitchCase": 1 } ],
     "linebreak-style": [2, "unix"],
     "quotes": [2, "single"],
-    "comma-dangle": 2,
+    "comma-dangle": ["error", {
+      "arrays": "always-multiline",
+      "objects": "always-multiline",
+      "imports": "always-multiline",
+      "exports": "always-multiline",
+      "functions": "ignore"
+    }],
     "curly": 2,
     "camelcase": 2,
     "brace-style": 2,
@@ -29,15 +49,10 @@
     "no-var": 2,
     "no-console": 0
   },
-  "globals": {
-  },
   "env": {
     "es6": true,
-    "jquery": false,
     "commonjs": true,
-    "amd": false,
-    "node": false,
-    "mocha": false,
+    "node": true,
     "browser": true
   }
 }
