--- a/package.json
+++ b/package.json
@@ -1,49 +1,54 @@
 {
-  "name": "swsscroll",
-  "version": "1.2.0",
+  "name": "@inotom/sws-smoothscroll",
+  "version": "2.0.0",
   "description": "Smooth scrolling fragment links script.",
-  "main": "lib/index.js",
-  "config": {
-    "dist_dir": "dist",
-    "src_dir": "src",
-    "js_src": "src/swsscroll.js",
-    "js_out": "dist/swsscroll.min.js"
-  },
+  "unpkg": "dist/sws-smoothscroll.js",
+  "files": [
+    "dist"
+  ],
   "scripts": {
-    "start": "npm run server & npm run watch",
-    "server": "browser-sync start --server $npm_package_config_dist_dir --files \"$npm_package_config_dist_dir/**/*\" --no-open",
-    "build": "npm run clean && npm run lint && npm run build:prod && npm run prepare",
-    "build:dev": "NODE_ENV=development browserify --debug $npm_package_config_js_src -t babelify -o $npm_package_config_js_out",
-    "build:prod": "NODE_ENV=production browserify $npm_package_config_js_src -t babelify | uglifyjs -m -c --comments | insertcopy >$npm_package_config_js_out",
-    "prepare": "babel src --out-dir lib",
-    "clean": "rimraf '**/.DS_Store' & rimraf $npm_package_config_js_out",
-    "watch": "NODE_ENV=development watchify --debug -t babelify $npm_package_config_js_src -o $npm_package_config_js_out -v",
-    "lint": "eslint $npm_package_config_src_dir/js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "NODE_ENV=development rollup -c -w",
+    "prebuild": "rimraf dist && npm run clean && npm run types",
+    "build": "NODE_ENV=production rollup -c",
+    "clean": "rimraf '**/.DS_Store'",
+    "prepublishOnly": "npm run build",
+    "release": "npm publish",
+    "types": "tsc --emitDeclarationOnly",
+    "lint": "eslint --ext .ts src",
+    "prettier": "prettier --write src/**/*.ts",
+    "test": "npm run lint"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/inotom/swsscroll.git"
+    "url": "git+https://github.com/inotom/sws-smoothscroll.git"
   },
   "keywords": [],
-  "author": "iNo (http://www.serendip.ws/)",
+  "author": "inotom (https://www.serendip.ws/)",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/inotom/swsscroll/issues"
+    "url": "https://github.com/inotom/sws-smoothscroll/issues"
   },
-  "homepage": "https://github.com/inotom/swsscroll#readme",
+  "homepage": "https://github.com/inotom/sws-smoothscroll#readme",
   "devDependencies": {
-    "babel-cli": "6.26.0",
-    "babel-core": "6.26.0",
-    "babel-eslint": "8.2.1",
-    "babel-preset-env": "1.6.1",
-    "babelify": "8.0.0",
-    "browser-sync": "2.23.5",
-    "browserify": "15.1.0",
-    "eslint": "4.15.0",
-    "insertcopy": "git+https://github.com/inotom/insertcopy.git#v1.0.0",
-    "rimraf": "2.6.2",
-    "uglify-js": "3.3.5",
-    "watchify": "3.9.0"
+    "@rollup/plugin-buble": "0.21.3",
+    "@rollup/plugin-commonjs": "20.0.0",
+    "@rollup/plugin-node-resolve": "13.0.4",
+    "@types/node": "16.4.9",
+    "@typescript-eslint/eslint-plugin": "4.28.5",
+    "@typescript-eslint/parser": "4.28.5",
+    "eslint": "7.32.0",
+    "eslint-config-prettier": "8.3.0",
+    "prettier": "2.3.2",
+    "rimraf": "3.0.2",
+    "rollup": "2.55.1",
+    "rollup-plugin-html2": "3.0.1",
+    "rollup-plugin-livereload": "2.0.5",
+    "rollup-plugin-serve": "1.1.0",
+    "rollup-plugin-terser": "7.0.2",
+    "rollup-plugin-typescript2": "0.30.0",
+    "typescript": "4.3.5"
+  },
+  "dependencies": {
+    "@inotom/smoothscroll": "2.1.0"
   }
 }
