--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@inotom/sws-smoothscroll",
   "version": "2.0.0",
-  "description": "Smooth scrolling fragment links script.",
+  "description": "Smooth scrolling fragment links script for browsers.",
   "unpkg": "dist/sws-smoothscroll.js",
   "files": [
     "dist"
